--- a/website/templates/base.jinja
+++ b/website/templates/base.jinja
@@ -65,6 +65,7 @@
 </div>
 
 <!--Toasts-->
+<div style="position:absolute; bottom:5px; width:100%">
 <div id="messages" class="toast">
 {% for category, message in get_flashed_messages(with_categories=true) %}
   {% if category == "error" %}
@@ -100,6 +101,7 @@
   </div>
   {% endif %}
 {% endfor %}
+</div>
 </div>
 
  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
