--- a/website/templates/base.jinja
+++ b/website/templates/base.jinja
@@ -49,15 +49,17 @@
 {% endblock %}
 
 <!--History button-->
+{% block history %}
 <button onclick="document.getElementById('history').style.display='block'" class="w3-button w3-circle medium w3-text-white" style="position:absolute; top:60px; right:10px; border:2px solid #fff; background-color:{{ config["theme_colors"][0] }}"><i class="fa fa-history" style="position:relative; top:1px;"></i></button>
 <div id="history" class="w3-modal">
   <div id="history_list" class="w3-modal-content w3-padding" style="background-color:{{ config["theme_colors"][1] }}">
     <span onclick="document.getElementById('history').style.display='none'" class="w3-button w3-display-topright w3-xlarge" style="padding:1px 16px;">&times;</span>
-    {% for time, _, msg in player.messages %}
+    {% for time, _, msg, _ in player.messages %}
     {{ time.strftime('%H:%M : ') + msg }}<br>
     {% endfor %}
   </div>
 </div>
+{% endblock %}
 
 <!--Content-->
 <div style="width: 100%; display:flex; flex-direction:column; justify-content:space-evenly; align-items:center; flex-grow: 1">
@@ -85,12 +87,14 @@
 
 {% for message_id, message, request in player.messages_to_show %}
   {% if request %}
-  <div class="w3-pale-yellow w3-round-large w3-border w3-border-yellow w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px; margin-left: 5px; margin-right: 5px;">
-    <i class="fa fa-question-circle w3-text-yellow" style="margin-right: 6px;"></i>
-    <div class="w3-center">{{ message }}</div>
-    <form method="GET">
-      <button onclick="this.parentElement.style.display='none'; hide_message({{ message_id }});" name="request_validation" value="accept" class="w3-hover-gray w3-round-large medium w3-green"><i class="fa fa-check"></i></button>
-      <button onclick="this.parentElement.style.display='none'; hide_message({{ message_id }});" name="request_validation" value="reject" class="w3-hover-gray w3-round-large medium w3-red"><i class="fa fa-times"></i></button>
+  <div class="w3-pale-yellow w3-round-large w3-border w3-border-yellow w3-padding-small" style="margin-bottom:5px;">
+    <div style="display:flex; justify-content:space-between; align-items:center;">
+      <i class="fa fa-question-circle w3-text-yellow" style="margin-right: 6px;"></i>
+      <div class="w3-center">{{ message }}</div>
+    </div>
+    <form method="POST" style="display:flex; justify-content:space-evenly; align-items:center;">
+      <button onclick="this.parentElement.style.display='none'; hide_message({{ message_id }});" name="request_validation" value="accept" class="w3-button w3-round-large w3-green w3-center" style="padding:3px; width:90px">Envoyer</i></button>
+      <button onclick="this.parentElement.style.display='none'; hide_message({{ message_id }});" name="request_validation" value="reject" class="w3-button w3-round-large w3-red w3-center" style="padding:3px; width:90px">Refuser</button>
     </form>
   </div>
   {% else %}
@@ -116,12 +120,14 @@
     socket.on('message', function(message_id, message, request) {
       if (request) {
         document.getElementById('messages').innerHTML += `
-        <div class="w3-pale-yellow w3-round-large w3-border w3-border-yellow w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px; margin-left: 5px; margin-right: 5px;">
-          <i class="fa fa-question-circle w3-text-yellow" style="margin-right: 6px;"></i>
-          <div class="w3-center">{{ message }}</div>
-          <form method="GET">
-            <button onclick="this.parentElement.style.display='none'; hide_message({{ message_id }});" name="request_validation" value="accept" class="w3-hover-gray w3-round-large medium w3-green"><i class="fa fa-check"></i></button>
-            <button onclick="this.parentElement.style.display='none'; hide_message({{ message_id }});" name="request_validation" value="reject" class="w3-hover-gray w3-round-large medium w3-red"><i class="fa fa-times"></i></button>
+        <div class="w3-pale-yellow w3-round-large w3-border w3-border-yellow w3-padding-small" style="margin-bottom:5px; margin-left: 5px; margin-right: 5px;">
+          <div style="display:flex; justify-content:space-between; align-items:center;">
+            <i class="fa fa-question-circle w3-text-yellow" style="margin-right: 6px;"></i>
+            <div class="w3-center">` + message + `</div>
+          </div>
+          <form method="POST" style="display:flex; justify-content:space-evenly; align-items:center;">
+            <button onclick="this.parentElement.style.display='none'; hide_message({{ message_id }});" name="request_validation" value="accept" class="w3-button w3-round-large w3-green w3-center" style="padding:3px; width:90px">Envoyer</i></button>
+            <button onclick="this.parentElement.style.display='none'; hide_message({{ message_id }});" name="request_validation" value="reject" class="w3-button w3-round-large w3-red w3-center" style="padding:3px; width:90px">Refuser</button>
           </form>
         </div>
         `;
