--- a/website/templates/choIx_couleurs.jinja
+++ b/website/templates/choIx_couleurs.jinja
@@ -4,6 +4,7 @@
 {% block player_money %}{% endblock %}
 {% block stars_table %}{% endblock %}
 {% block donation_button %}{% endblock %}
+{% block history %}{% endblock %}
 {% block content %}
 
 <form method="POST" class="w3-center w3-display-middle large w3-padding-small" style="width:100%; height:100%; max-width:700px; display:flex; flex-direction:column;">
