--- a/website/templates/login.jinja
+++ b/website/templates/login.jinja
@@ -45,4 +45,15 @@
     </div>
   </body>
 
+<div style="position:absolute; bottom:5px; width:100%">
+  <div id="messages" class="toast">
+    <div class="w3-pale-red w3-round-large w3-border w3-border-red w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px; margin-left: 5px; margin-right: 5px;">
+      <i class="fa fa-exclamation-circle w3-text-red" style="margin-right: 6px;"></i>
+      <div class="w3-center">{{ get_flashed_messages()[0] }}</div>
+      <span onclick="this.parentElement.style.display='none'" class="w3-hover-gray w3-center w3-round-large" style="width: 25px; position:relative; left:3px">&times;</span>
+    </div>
+  </div>
+</div>
+
+
 </html>
