--- a/website/templates/base.jinja
+++ b/website/templates/base.jinja
@@ -54,7 +54,7 @@
 <div id="history" class="w3-modal">
   <div id="history_list" class="w3-modal-content w3-padding" style="background-color:{{ config["theme_colors"][1] }}">
     <span onclick="document.getElementById('history').style.display='none'" class="w3-button w3-display-topright w3-xlarge" style="padding:1px 16px;">&times;</span>
-    {% for time, _, msg, _ in player.messages %}
+    {% for time, _, _, msg in player.messages %}
     {{ time.strftime('%H:%M : ') + msg }}<br>
     {% endfor %}
   </div>
@@ -137,7 +137,7 @@
       </div>
       `;
       document.getElementById('history_list').innerHTML += message + '<br>';
-    }
+    });
     socket.on('waiting_count', function(count) {
         document.getElementById('count').innerHTML = count;
     });
