--- a/website/static/flouze.css
+++ b/website/static/flouze.css
@@ -30,6 +30,7 @@ html,body{font-family: 'Baloo 2', cursive;font-size:15px;line-height:1.5}html{ov
 body {background-repeat: no-repeat;background-attachment: fixed;background-size: cover}
 h1{font-size:36px}h2{font-size:30px}h3{font-size:24px}h4{font-size:20px}h5{font-size:18px}h6{font-size:16px}.w3-serif{font-family:serif}
 h1,h2,h3,h4,h5,h6{font-family: 'Baloo 2', cursive;font-weight:400;margin:10px 0}.w3-wide{letter-spacing:4px}
+select, option {font: -moz-pull-down-menu;}
 hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-table,.w3-table-all{border-collapse:collapse;border-spacing:0;width:100%;display:table}.w3-table-all{border:1px solid #ccc}
 .w3-bordered tr,.w3-table-all tr{border-bottom:1px solid #ddd}.w3-striped tbody tr:nth-child(even){background-color:#f1f1f1}
@@ -242,7 +243,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .coin-medium{width:25px!important; position:relative; top:5px}
 .coin-large{width:27px!important; position:relative; top:4px}
 
-.toast{margin:auto; display:flex; flex-direction: column; align-items:center; font-size:18px;}
+.toast{position:absolute; bottom:5px; width:100%; margin:auto; display:flex; flex-direction: column; align-items:center; font-size:18px;}
 
 .circle {display:inline-block;border-radius: 50%;width: 55px;height: 55px;font-size:28px!important; margin:5px; border:5px solid #009688;background-color: #bff5ea;}
 .circle.checked {background-color:lightgray;}
