--- a/website/templates/base.jinja
+++ b/website/templates/base.jinja
@@ -55,7 +55,7 @@
   <div id="history_list" class="w3-modal-content w3-padding" style="background-color:{{ config["theme_colors"][1] }}">
     <span onclick="document.getElementById('history').style.display='none'" class="w3-button w3-display-topright w3-xlarge" style="padding:1px 16px;">&times;</span>
     {% for time, _, _, msg in player.messages %}
-    {{ time.strftime('%H:%M : ') + msg }}<br>
+    {{ time.strftime("%H:%M : ") + msg|replace("<br>", " ") }}<br>
     {% endfor %}
   </div>
 </div>
@@ -67,7 +67,6 @@
 </div>
 
 <!--Toasts-->
-<div style="position:absolute; bottom:5px; width:100%">
 <div id="messages" class="toast">
 {% for category, message in get_flashed_messages(with_categories=true) %}
   {% if category == "error" %}
@@ -86,24 +85,24 @@
 {% endfor %}
 
 {% for is_request, message_id, message in player.messages_to_show %}
-  {% if is_request %}
-  <div class="w3-pale-yellow w3-round-large w3-border w3-border-yellow w3-padding-small" style="margin-bottom:5px;">
-    <div style="display:flex; justify-content:space-between; align-items:center;">
-      <i class="fa fa-question-circle w3-text-yellow" style="margin-right: 6px;"></i>
-      <div class="w3-center">{{ message }}</div>
-    </div>
-    <button onclick="this.parentElement.style.display='none'; hide_message({{ message_id }}); answer_flouze_request(true);" class="w3-button w3-round-large w3-green w3-center" style="padding:3px; width:90px">Envoyer</i></button>
-    <button onclick="this.parentElement.style.display='none'; hide_message({{ message_id }}); answer_flouze_request(false);" class="w3-button w3-round-large w3-red w3-center" style="padding:3px; width:90px">Refuser</button>
-  </div>
-  {% else %}
+  {% if not is_request %}
   <div class="w3-pale-green w3-round-large w3-border w3-border-green w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px; margin-left: 5px; margin-right: 5px;">
     <i class="fa fa-info-circle w3-text-green" style="margin-right: 6px;"></i>
     <div class="w3-center">{{ message }}</div>
     <span onclick="this.parentElement.style.display='none'; hide_message({{ message_id }});" class="w3-hover-gray w3-center w3-large w3-round-large" style="width: 25px; position:relative; left:3px">&times;</span>
   </div>
+  {% else %}
+  <div class="w3-pale-yellow w3-round-large w3-border w3-border-yellow w3-padding-small" style="margin-bottom:5px; margin-left: 5px; margin-right: 5px;">
+    <div style="display:flex; justify-content:space-between; align-items:center;">
+      <i class="fa fa-question-circle w3-text-yellow" style="margin-right: 6px;"></i>
+      <div class="w3-center">{{ message }}</div>
+    </div>
+    <div style="display:flex; justify-content:space-around;">
+      <button onclick="this.parentElement.parentElement.style.display='none'; hide_message({{ message_id }}); answer_flouze_request(true);" class="w3-button w3-round-large w3-green w3-center" style="padding:3px; width:90px">Envoyer</i></button>
+      <button onclick="this.parentElement.parentElement.style.display='none'; hide_message({{ message_id }}); answer_flouze_request(false);" class="w3-button w3-round-large w3-red w3-center" style="padding:3px; width:90px">Refuser</button>
+  </div>
   {% endif %}
 {% endfor %}
-</div>
 </div>
 
  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
@@ -123,7 +122,8 @@
         <span onclick="this.parentElement.style.display='none'; hide_message(` + message_id + `);" class="w3-hover-gray w3-center w3-large w3-round-large" style="width: 25px; position:relative; left:3px">&times;</span>
       </div>
       `;
-      document.getElementById('history_list').innerHTML += message + '<br>';
+      let timeofday = (new Date()).toLocaleTimeString([], { hour: "2-digit", minute:"2-digit" });
+      document.getElementById('history_list').innerHTML += timeofday + " :" message.replace('<br>', '') + '<br>';
     });
     socket.on('request', function(message_id, message) {
       document.getElementById('messages').innerHTML += `
@@ -132,11 +132,14 @@
           <i class="fa fa-question-circle w3-text-yellow" style="margin-right: 6px;"></i>
           <div class="w3-center">` + message + `</div>
         </div>
-        <button onclick="this.parentElement.style.display='none'; hide_message({{ message_id }}); answer_flouze_request(true);" class="w3-button w3-round-large w3-green w3-center" style="padding:3px; width:90px">Envoyer</i></button>
-        <button onclick="this.parentElement.style.display='none'; hide_message({{ message_id }}); answer_flouze_request(false);" class="w3-button w3-round-large w3-red w3-center" style="padding:3px; width:90px">Refuser</button>
+        <div style="display:flex; justify-content:space-around;">
+          <button onclick="this.parentElement.parentElement.style.display='none'; hide_message({{ message_id }}); answer_flouze_request(true);" class="w3-button w3-round-large w3-green w3-center" style="padding:3px; width:90px">Envoyer</i></button>
+          <button onclick="this.parentElement.parentElement.style.display='none'; hide_message({{ message_id }}); answer_flouze_request(false);" class="w3-button w3-round-large w3-red w3-center" style="padding:3px; width:90px">Refuser</button>
+        </div>
       </div>
       `;
-      document.getElementById('history_list').innerHTML += message + '<br>';
+      let timeofday = (new Date()).toLocaleTimeString([], { hour: "2-digit", minute:"2-digit" });
+      document.getElementById('history_list').innerHTML += timeofday + " : " + message.replace('<br>', '') + '<br>';
     });
     socket.on('waiting_count', function(count) {
         document.getElementById('count').innerHTML = count;
