--- a/website/templates/title.jinja
+++ b/website/templates/title.jinja
@@ -2,6 +2,7 @@
 {% set config = game.config %}
 {% extends "base.jinja" %}
 {% block title %}Flouze - Jeu {{game.game_nb}}{% endblock %}
+{% block stars_table %}{% if game.game_nb == 5 %}{% else %}{{ super() }}{% endif %}{% endblock %}
 {% block donation_button %}{% if game.game_nb == 5 %}{% else %}{{ super() }}{% endif %}{% endblock %}
 {% block content %}
 
