--- a/website/templates/en_attente.jinja
+++ b/website/templates/en_attente.jinja
@@ -4,8 +4,8 @@
 {% block content %}
 
 <div class="w3-pale-blue w3-round-large w3-border w3-border-blue w3-center w3-padding animate__animated animate__fadeIn">
-  <h5>En attente des autres joueurs</h5>
-  <h4 id="count">{{ game.current_waiting_count }} / 5</h4>
+  En attente des autres joueurs<br>
+  <span class="large" id="count">{{ game.current_waiting_count }} / 5</span>
 </div>
 
 {% endblock %}
