--- a/website/templates/monitoring.jinja
+++ b/website/templates/monitoring.jinja
@@ -22,7 +22,7 @@
     {% for player in engine.players %}
     <div class="w3-center w3-margin w3-xlarge" style="width:360px; background-color:{{ player.color["primary"] }}">
       <p><b>{{ player.name }}</b></p>
-      <div class="w3-row large">
+      <div class="w3-row w3-xlarge">
         <div class="w3-half">
           {{ player.stars }} <i class="fa fa-star"></i><br>
         </div>
