--- a/website/templates/results.jinja
+++ b/website/templates/results.jinja
@@ -6,7 +6,7 @@
 {% block donation_button %}{% if stage[0] == 5 %}{% else %}{{ super() }}{% endif %}{% endblock %}
 {% block content %}
 
-<div class="w3-panel w3-large w3-pale-blue w3-round-large w3-border w3-border-blue w3-center w3-padding w3-margin animate__animated animate__fadeIn">
+<div class="w3-panel w3-pale-blue w3-round-large w3-border w3-border-blue w3-center w3-padding w3-margin animate__animated animate__fadeIn">
   {{ player.message }}
   {% if player.last_profit != 0 %}
     <form action="partager_profit" method="GET">
