--- a/website/static/flouze.css
+++ b/website/static/flouze.css
@@ -233,11 +233,33 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-border-pale-yellow,.w3-hover-border-pale-yellow:hover{border-color:#ffffcc!important}.w3-border-pale-blue,.w3-hover-border-pale-blue:hover{border-color:#e7ffff!important}
 
 /* Custom */
+.star-table{font-size:16px!important; width:115px}
+.star-cell{padding:4px 8px}
 
 .small{font-size:16px!important}
 .medium{font-size:20px!important}
 .large{font-size:28px!important}
 .huge{font-size:33px!important}
+
+@media (min-width:1000px){
+  .star-table{font-size:20px!important;  width:170px}
+  .star-cell{padding:8px 16px}
+
+  .small{font-size:20px!important}
+  .medium{font-size:28px!important}
+  .large{font-size:33px!important}
+  .huge{font-size:40px!important}
+}
+
+.anim{width:calc(100vh - 300px); width: -webkit-calc(100vh - 300px); width: -moz-calc(100vh - 300px); height:calc(100vh - 300px); height: -webkit-calc(100vh - 300px); height: -moz-calc(100vh - 300px);}
+@media (max-aspect-ratio:3/5){
+  .anim{width:100%; height:100vw;}
+}
+
+@media (max-height:700px){
+  .star-cell{padding:1px 8px}
+}
+
 
 .coin-small{width:20px!important; position:relative; top:4px}
 .coin-medium{width:25px!important; position:relative; top:5px}
