--- a/website/templates/Jeu1-choix.jinja
+++ b/website/templates/Jeu1-choix.jinja
@@ -5,11 +5,11 @@
 {% block content %}
 
 <div class="w3-card-4 w3-center w3-white animate__animated animate__fadeIn" style="max-width:450px; width:90%; min-width:310px;">
-<header class="w3-text-white w3-padding medium" style="background-color:{{ game.config["theme_colors"][0] }}">
+<header class="w3-text-white w3-padding large" style="background-color:{{ game.config["theme_colors"][0] }}">
     Combien de tiquets voulez-vous mettre en jeu ?
 </header>
 <form method="POST">
-<select class="w3-select w3-border w3-margin w3-large" style="width:180px;" id="tickets" name="tickets">
+<select class="w3-select w3-border w3-margin" style="width:180px;" id="tickets" name="tickets">
 <option value="" disabled="" selected="">Nombre de tickets</option>
 <option value=0>Aucun ticket</option>
 <option value=1>1 ticket</option>
@@ -17,7 +17,7 @@
 <option value={{i}}>{{i}} tickets</option>
 {% endfor %}
 </select>
-<button name="jeu1" type="submit" class="w3-button w3-large w3-text-white" style="background-color:{{ config["theme_colors"][0] }}">Valider</button></form>
+<button name="jeu1" type="submit" class="w3-button w3-text-white" style="background-color:{{ config["theme_colors"][0] }}">Valider</button></form>
 </div>
 
 {% endblock %}
