--- a/website/templates/Jeu2-reveal.jinja
+++ b/website/templates/Jeu2-reveal.jinja
@@ -10,10 +10,10 @@
   <div class="flip-card card-size">
     <div id="card{{ loop.index0 }}" {% if reveal_state[loop.index0] %} style="transform: rotateY(180deg)" {% endif %} class="flip-card-inner">
       <div class="flip-card-front" style="background-color:{{ player_it.color["primary"] }};">
-        <h4><b>{{ player_it.name }}</b></h4>
+        <b class="large w3-padding">{{ player_it.name }}</b>
       </div>
       <div class="flip-card-back" style="background-color:{{ player_it.color["primary"] }};">
-        <h4><b>{{ player_it.name }}</b></h4>
+        <b class="large w3-padding">{{ player_it.name }}</b>
         <div class="w3-display-container" style="height:50px;">
           <div class="circle-big w3-lobster w3-xxlarge w3-display-middle w3-text-white" style="background-color:{{ player_it.color["secondary"]}};">{{ player_it.choice }}</div>
         </div>
