--- a/website/templates/Jeu3-choix.jinja
+++ b/website/templates/Jeu3-choix.jinja
@@ -5,11 +5,11 @@
 {% block content%}
 
 <form method="POST" class="w3-card-4 w3-center w3-white w3-text-white animate__animated animate__fadeIn">
-<header class="w3-padding medium" style="background-color:{{ config["theme_colors"][0] }}">
+<header class="w3-padding large" style="background-color:{{ config["theme_colors"][0] }}">
     Combien shouaitez vous investir ?
 </header>
-<p><input class="w3-input w3-border w3-round-large w3-center w3-large" placeholder="Montant" name="montant" type="number" style="width:120px; display:inline-block;"></p>
-<button name="jeu3" type="submit" class="w3-button w3-large" style="background-color:{{ config["theme_colors"][0] }}">Valider</button>
+<p><input class="w3-input w3-border w3-round-large w3-center" placeholder="Montant" name="montant" type="number" style="width:120px; display:inline-block;"></p>
+<button name="jeu3" type="submit" class="w3-button" style="background-color:{{ config["theme_colors"][0] }}">Valider</button>
 <p>
 </form>
 
