--- a/website/templates/Jeu5-Valider.jinja
+++ b/website/templates/Jeu5-Valider.jinja
@@ -6,8 +6,8 @@
 {% block content %}
 
   <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:350px;">
-  <header class="w3-container" style="background-color:{{ config["theme_colors"][0] }}">
-      <h4>{{ player.message }}</h4>
+  <header class="w3-container w3-padding large" style="background-color:{{ config["theme_colors"][0] }}">
+      {{ player.message }}
   </header>
   <form class="w3-container" method="POST">
   <p>
