--- a/website/templates/choix_etoiles.jinja
+++ b/website/templates/choix_etoiles.jinja
@@ -5,8 +5,8 @@
 {% block content%}
 
   <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:350px;">
-  <header class="w3-container" style="background-color:{{ config["theme_colors"][0] }}">
-      <h4>Shouaitez-vous léguer des étoiles ?</h4>
+  <header class="w3-container large" style="background-color:{{ config["theme_colors"][0] }}">
+      Shouaitez-vous léguer des étoiles ?
   </header>
   <form class="w3-container" method="POST">
   <p>
