--- a/website/templates/don_etoiles.jinja
+++ b/website/templates/don_etoiles.jinja
@@ -5,8 +5,8 @@
 {% block content %}
 
   <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:250px;">
-  <header class="w3-container" style="background-color:{{ config["theme_colors"][0] }}">
-      <h4>À qui shouaitez-vous léguer des étoiles ?</h4>
+  <header class="w3-container large" style="background-color:{{ config["theme_colors"][0] }}">
+      À qui shouaitez-vous léguer des étoiles ?
   </header>
   <form class="w3-container" method="POST">
   <select name="destinataire" class="w3-select w3-border w3-margin w3-round-large w3-center" style="width:120px;">
