--- a/website/templates/faire_un_don.jinja
+++ b/website/templates/faire_un_don.jinja
@@ -6,7 +6,7 @@
 {% block content %}
 
   <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:240px;">
-  <header class="w3-container w3-padding" style="background-color:{{ config["theme_colors"][0] }}; font-size:22px">
+  <header class="w3-container w3-padding large" style="background-color:{{ config["theme_colors"][0] }}; font-size:22px">
       Faire un don
   </header>
   <form class="w3-container" method="POST">
