--- a/website/templates/login.jinja
+++ b/website/templates/login.jinja
@@ -27,24 +27,23 @@
     <title>Login</title>
   </head>
 
-  <body>
+  <body class="medium">
     <div class="w3-card-4 w3-display-middle w3-white" style="width:300px;">
-      <div class="w3-container w3-green w3-center w3-xlarge w3-padding">
+      <div class="w3-container w3-green w3-center large w3-padding">
         Qui est-tu ?
       </div>
 
       <form class="w3-container" method="POST">
-        <p>
-        <input type="text" class="w3-input" id="firstName" name="firstName">
+        <input type="text" class="w3-input w3-margin-top" id="firstName" name="firstName">
         <label>Prénom</label></p>
-        <p>
-        <input type="password" class="w3-input" id="password" name="password">
+        <input type="password" class="w3-input w3-margin-top" id="password" name="password">
         <label>Mot de passe</label></p>
         <p class="w3-center"><button type="submit" class="w3-btn w3-blue-grey">Se connecter</button></p>
       </form>
     </div>
   </body>
 
+{% if get_flashed_messages() %}
 <div style="position:absolute; bottom:5px; width:100%">
   <div id="messages" class="toast">
     <div class="w3-pale-red w3-round-large w3-border w3-border-red w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px; margin-left: 5px; margin-right: 5px;">
@@ -54,6 +53,7 @@
     </div>
   </div>
 </div>
+{% endif %}
 
 
 </html>
