--- a/website/static/flouze.css
+++ b/website/static/flouze.css
@@ -238,7 +238,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 
 .small{font-size:16px!important}
 .medium{font-size:20px!important}
-.large{font-size:28px!important}
+.large{font-size:25px!important}
 .huge{font-size:33px!important}
 
 @media (min-width:1000px){
@@ -246,18 +246,21 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   .star-cell{padding:8px 16px}
 
   .small{font-size:20px!important}
-  .medium{font-size:28px!important}
+  .medium{font-size:25px!important}
   .large{font-size:33px!important}
   .huge{font-size:40px!important}
+
+  h2{font-size:50px}
 }
 
-.anim{width:calc(100vh - 300px); width: -webkit-calc(100vh - 300px); width: -moz-calc(100vh - 300px); height:calc(100vh - 300px); height: -webkit-calc(100vh - 300px); height: -moz-calc(100vh - 300px);}
+.anim{width:calc(100vh - 300px); width: -webkit-calc(100vh - 300px); width: -moz-calc(100vh - 300px); height:calc(100vh - 300px); height: -webkit-calc(100vh - 300px); height: -moz-calc(100vh - 300px); border-radius:50px}
 @media (max-aspect-ratio:3/5){
-  .anim{width:100%; height:100vw;}
+  .anim{width:100%; height:100vw; border-radius:0}
 }
 
 @media (max-height:700px){
   .star-cell{padding:1px 8px}
+  h2{font-size:26px; margin:5px}
 }
 
 
