--- a/website/templates/Jeu1-choix.jinja
+++ b/website/templates/Jeu1-choix.jinja
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="w3-card-4 w3-center w3-white animate__animated animate__fadeIn" style="max-width:450px; width:90%; min-width:310px;">
-<header class="w3-text-white w3-padding large" style="background-color:{{ game.config["theme_colors"][0] }}">
+<header class="w3-text-white w3-padding medium" style="background-color:{{ game.config["theme_colors"][0] }}">
     Combien de tiquets voulez-vous mettre en jeu ?
 </header>
 <form method="POST">
